...
        }
    ) { paddingValues ->
        Box(
            modifier = modifier
                .fillMaxSize()
                .padding(paddingValues)
                .testTag("notification_details_page")
        ) {
            if (uiState.hasError) {
                Text(
                    text = uiState.errorMessage ?: stringResource(R.string.something_went_wrong),
                    style = MaterialTheme.typography.titleLarge,
                    color = MaterialTheme.colorScheme.error,
...
